k8s/dev/nginx/twitter-nginx-react.yaml
# frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend # deploymentのfrontendを指定
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
# frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: twitter-web:v1.0.7
        imagePullPolicy: Never
