k8s/dev/nginx/twitter-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    app: twitter
    type: web
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: twitter
    type: web

---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: twitter
    type: web
spec:
  containers:
  - name: nginx
    image: nginx:latest
    # image: twitter-nginx:v1.0.0
    # imagePullPolicy: Never
    ports:
    - containerPort: 80
    volumeMounts:
    - name: config-volume
      # mountPath: /home/nginx
      mountPath: /etc/nginx/
  volumes:
  - name: config-volume
    configMap:
      name: nginx-config
