k8s/dev/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: twitter
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /register
            backend:
              serviceName: goapp
              servicePort: 4000
          - path: /login
            backend:
              serviceName: goapp
              servicePort: 4000
          - backend:
              serviceName: reactapp
              # serviceName: react-svc
              servicePort: 3000
            path: /
